--- a/app/src/main/res/layout/activity_pending_single_picturebook.xml
+++ b/app/src/main/res/layout/activity_pending_single_picturebook.xml
@@ -24,7 +24,8 @@
                 android:padding="5dp"
                 android:text="@string/title_single_picturebook"
                 android:textAllCaps="true"
-                android:textColor="@color/black" />
+                android:textColor=" #6a1b76"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewTitleAdmin2"
@@ -42,7 +43,8 @@
                 android:padding="5dp"
                 android:text="@string/summary_single_picturebook"
                 android:textAllCaps="true"
-                android:textColor="@color/black" />
+                android:textColor=" #6a1b76"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewSummaryAdmin"
@@ -60,7 +62,8 @@
                 android:padding="5dp"
                 android:text="@string/author"
                 android:textAllCaps="true"
-                android:textColor="@color/black" />
+                android:textColor=" #6a1b76"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewStatusAdmin"
@@ -78,7 +81,8 @@
                 android:padding="5dp"
                 android:text="@string/status"
                 android:textAllCaps="true"
-                android:textColor="@color/black" />
+                android:textColor=" #6a1b76"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewStatusAdmin2"
