--- a/app/src/main/res/layout/admin_row_item.xml
+++ b/app/src/main/res/layout/admin_row_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_admin"
         android:layout_gravity="center"
         android:layout_width="match_parent"
@@ -34,7 +34,8 @@
                 android:layout_toRightOf="@+id/imageViewAdmin"
                 android:paddingLeft="40dp"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/authorNameTextAdmin"
@@ -47,7 +48,8 @@
                 android:text="Author: "
                 android:textAllCaps="true"
                 android:textColor="#6a1b76"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/authorNameAdmin"
@@ -72,7 +74,8 @@
                 android:text="Status: "
                 android:textAllCaps="true"
                 android:textColor="#6a1b76"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/statusAdmin"
