--- a/app/src/main/res/layout/row_review.xml
+++ b/app/src/main/res/layout/row_review.xml
@@ -38,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:text="Name"
                 android:textColor="#6a1b76"
-                android:textSize="20dp"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <RatingBar
