--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="gris_light">#E1DFE1</color>
     <color name="titanum_yellow">#E9DF00</color>
+    <color name="violet">#c788e1</color>
 </resources>
