--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_image</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">#c788e1</item>
+    </style>
+
     <style name="Theme.Project.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
